rework nav menu

--- a/IncomeTracer/Components/Layout/NavMenu.razor
+++ b/IncomeTracer/Components/Layout/NavMenu.razor
@@ -15,15 +15,19 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="stocks">
+                <span class="bi bi-graph-up-nav-menu" aria-hidden="true"></span> Stocks
             </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
+            <div class="px-3">
+                <NavLink class="nav-link" href="stocks/insights">
+                    <span class="bi bi-calendar-range-fill-nav-menu" aria-hidden="true"></span> Insights
+                </NavLink>
+            </div>
+            <div class="px-3">
+                <NavLink class="nav-link" href="stocks/manage">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Manage
+                </NavLink>
+            </div>
         </div>
     </nav>
 </div>
